# nmpde-non-linear-cardiac-mechanics-solver

./: .gitignore  README.md
common/: cmake-common.cmake
lifex_fiber_generation_examples/: COPYRIGHT.md
lifex_fiber_generation_examples/mesh/: hollow_sphere_LA.msh  idealized_LV.msh  slab_sphere.msh  truncated_ellipsoid.msh
lifex_fiber_generation_examples/prm/: 01_strocchi_LV.prm  03_fastl_LA.prm  idealized_LA.prm  idealized_LV.prm  slab_cubic.prm  slab_sphere.prm  truncated_ellipsoid.prm
mesh/: slab_cubic.geo  slab_cubic.msh  test_1_slab_cubic.geo  test_2_idealized_LV.geo
src/: :w  BaseSolver.cpp  BaseSolver.hpp  CMakeLists.txt  Doxyfile  LinearSolverConfiguration.hpp  LinearSolverUtility.hpp
src/html/: Assert_8hpp.html  Assert_8hpp__dep__incl.map  Assert_8hpp__dep__incl.md5  Assert_8hpp__incl.map  Assert_8hpp__incl.md5  Assert_8hpp_source.html  BaseSolverGuccione_8cpp.html  (+240 more)
src/tests/idealized_LV/: CMakeLists.txt  IdealizedLV.cpp  IdealizedLV.hpp  main.cpp  parameters.prm
src/tests/idealized_LV/test_parameters/: parameters_bicgstab_identity.prm  parameters_bicgstab_ilu.prm  parameters_bicgstab_sor.prm  parameters_bicgstab_ssor.prm  parameters_gmres_ilu.prm  parameters_gmres_sor.prm  parameters_gmres_ssor.prm
src/tests/slab_cubic/: CMakeLists.txt  SlabCubic.cpp  SlabCubic.hpp  dealii_cook_membrane_template.cpp  main.cpp  parameters.prm
src/tests/slab_cubic/.cache/clangd/index/: SlabCubic.hpp.A20B0656CC6D0A87.idx  main.cpp.FC7470FDA1BE6319.idx  slab_cubic.hpp.F02F08B4DCB664CE.idx
src/tests/slab_cubic/test_parameters/: parameters_bicgstab_ssor.prm
(+339 files in other folders)
